jsAPI.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

.commonPopup {
	font-family: "Open Sans", sans-serif;
	font-size: 30px;
	background: #212936;
	color: #ffffff;
}

.popupMain {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	bottom: 0;
	right: 0;
	padding: 20px;
}

.commandPopup {
	background: #242C3B
}

.loginPopup {
	position: absolute;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	bottom: 0;
	right: 0;
	padding: 20px;
}

.textFieldLabeled {
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	color: #ffffff;
	font-size: 25px;
	padding: 10px;
}

.textLabel {
	flex: 1;
	font-weight: 700;
	text-align: right;
	padding-right: 20px;
}

.simpleText {
	flex: 1;
	font-weight: 400;
	text-align: left;
	padding-right: 20px;
}

.textInput {
	flex: 1;
	font-size: 25px;
	padding-left: 10px;
	border: none;
	border-bottom: 1px solid #ffffff;
	background-color: transparent;
	font-weight: 200;
	color: #ffffff;
	font-size: 25px;
}

.button {
	font-family: "Open Sans", sans-serif;
	font-size: 25px;
	color: #ffffff;
	padding: 5px 15px;
	margin-top: 20px;
	border: none;
	border-radius: 5px;
  }

.loginButton:active {
	background-color: #80c4f9;
}

.loginButton {
	background-color: #4dacf6;
	width: 100%;
	height: 100%;
}

input[type="text"] {
  	width: 220px;
  	margin-left: 10px;
  	border: none;
  	border-bottom: 1px solid #ffffff;
  	background-color: transparent;
  	font-weight: 200;
}
input[type="password"] {
  	color: #ffffff;
  	width: 220px;
  	margin-left: 10px;
  	font-size: 25px;
  	border: none;
  	border-bottom: 1px solid #ffffff;
  	background-color: transparent;
}

input:focus {
	outline: none;
	border-bottom: 1px solid #80c4f9;
	caret-color: #80c4f9;
}

.textInput {
	color: #ffffff;
	font-size: 25px;
}

.settingsTextField {
	background: #2B3D5B;
	color: #ffffff;
	font-size: 25px;
}

